--- a/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
+++ b/src/SimplCommerce.WebHost/SimplCommerce.WebHost.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CodeComet.CaptureMiddleware" Version="0.1.1" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
     <PackageReference Include="Microsoft.AspNetCore.Antiforgery" Version="2.2.0" />
